basic architechture of framework is ready and working